k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
     component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: ogonommo/api:1.0.1
          ports:
            - containerPort: 5000
